--- a/src/styles/base/_variables.css
+++ b/src/styles/base/_variables.css
@@ -3,7 +3,7 @@
     --secundart-color: #FF3D91;
     --terciary-color: #22C4FF;
     --font-family: 'Roboto', sans-serif ;
-    --font-size-base: 16px;
-    --text-color: #D4D4D4 ;
+    --font-size-base: 14px;
+    --text-color: #cfcfcf ;
     --background-colors: #020817;
 }
