--- a/src/styles/base/_globales.css
+++ b/src/styles/base/_globales.css
@@ -7,7 +7,7 @@ body{
 }
 a {
     text-decoration: none;
-    color: var(--primary-color);
+    color: white;
   }
   
   ul {
@@ -19,7 +19,4 @@ a {
     color: white;
     margin: 0;
     padding: 0;
-  }
-  p{
-    font-size: 1rem;
   }
