--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -17,7 +17,8 @@ section{
     max-width: 1100px;
     padding: 0px 20px;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    /* flex-direction: column; */
     align-items: center;
     margin: 0 auto;
 }
@@ -175,9 +176,14 @@ section .elipse-blu-s{
 
 .cebrero-ux{
     max-width: 450px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 .cebrero-ux .brain{
     position: relative; /* Necesario para la animación */
+    margin: 0px auto;
     animation: moveUpDown 5s infinite ease-in-out; /* Configuración de la animación */
 }
 /* Animación para mover de arriba a abajo */
@@ -428,9 +434,9 @@ article:hover .articulo {
     .contenedor-dos{
         padding: 0px 20px;
         display: flex;
-        flex-direction: row;
-        align-items: normal;
-        margin: 0 auto;
+        flex-wrap: nowrap;
+        /* flex-direction: row; */
+        /* align-items: normal; */
         padding-top: 50px;
     }
     
