--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -59,15 +59,22 @@ section{
 }
 .text-head h1{
     font-weight: 500;
-    font-size: 38px;
+    font-size: 39px;
     margin-bottom: 5px;
 }
-.text-head h1 span{
-    font-weight: bold; /* Grosor del texto */
+
+.text-head .abajo{
+    font-size: 30px;
+    font-weight: 300;
+}
+
+.text-head .abajo span{
+    font-weight: 600; /* Grosor del texto */
   background: linear-gradient(90deg, #FF3D91, #22C4FF); /* Degradado de colores */
   -webkit-background-clip: text; /* Aplica el fondo al texto */
   -webkit-text-fill-color: transparent; /* Hace el texto transparente para mostrar el degradado */
 }
+
 .text-head p{
     margin-top: 30px;
     font-size: 12px;
@@ -81,7 +88,7 @@ section{
 .btns a button{
     height: 50px;
     padding: 12 16;
-    border-radius: 14px;
+    border-radius: 40px;
     cursor: pointer;
     font-size: 16px;
     font-weight: 500;
@@ -93,27 +100,66 @@ section{
 }
 .btn-descargar:hover{
     background-color: rgb(229, 229, 229);
+    font-weight: 700;
     transition: color 0.3s ease;
 }
 .btn-contactar{
+    position: relative;
     background-color: #020817;
-    border: 1px solid #00D9FF;
-    color: #00D9FF;
-    font-weight: 400 !important;
+    z-index: 1;
+    border: none;
+    /* border: 1px solid #00D9FF; */
+    color: #ffffff;
+    font-weight: 300 !important;
     display: flex;
     justify-content: center;
     align-items: center;
     transition: color 0.3s ease;
+    overflow: hidden;
+}
+.btn-contactar:hover{
+    font-weight: 400 !important;
 }
 .btn-contactar img{
     margin-left: 8px;
 }
-.btn-contactar:hover{
+/* .btn-contactar:hover{
     transition: color 0.3s ease;
     border: 1px solid #5fe7ff;
     color: #5fe7ff;
     background-color: #080808;
 }
+ */
+
+.btn-contactar::before {
+    content: "";
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
+    background: linear-gradient(90deg, #FF3D91, #22C4FF);
+    border-radius: inherit;
+    z-index: -1;
+  }
+
+  .btn-contactar:hover::before {
+    background: linear-gradient(90deg, #dc156c, #003f55);
+  }
+  
+  .btn-contactar::after {
+    content: "";
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    right: 2px;
+    bottom: 2px;
+    background: #020817;
+    border-radius: inherit;
+    z-index: -1;
+  }
+
+
 
 section .elipse-fu-s{
     width: 400px;
@@ -129,49 +175,132 @@ section .elipse-blu-s{
 
 /* Section 2 */
 
+
+
 .text-head-dos{
     text-align: center;
-    padding-top: 80px;
+    padding-top: 70px;
     padding-bottom: 10px;
 }
-.text-head-dos h1{
+.text-head-dos .content-text h1{
     font-weight: 500;
     font-size: 28px;
-    line-height: 36px;
+    line-height: 28px;
+    padding: 16px 20px;
 }
+
+.content-text{
+    position: relative;
+    width: auto;
+    height: auto;
+    padding: 4px 4px;
+    
+}
+
+.content-text h1{
+    background-color: #080808;
+    border: 0.8px solid rgb(3, 162, 220);
+    cursor: text;
+}
+
+.corner {
+    position: absolute;
+    width: 8px;
+    height: 8px;
+    background-color: rgb(255, 255, 255);
+    border: 0.8px solid rgb(3, 162, 220);
+  }
+
+  /* Posición de cada esquina */
+.top-left {
+    top: 0;
+    left: 0;
+  }
+  
+  .top-right {
+    top: 0;
+    right: 0;
+  }
+  
+  .bottom-left {
+    bottom: 0;
+    left: 0;
+  }
+  
+  .bottom-right {
+    bottom: 0;
+    right: 0;
+  }
+
 .text-head-dos p{
     line-height: 24px;
 }
 
 
+
+
+
 .btn-experiencia{
     margin-top: 32px;
     height: 50px;
-    padding: 12px 24px;
-    border-radius: 14px;
-    cursor: pointer;
-    font-size: 16px;
-    font-weight: 500;
+    padding: 12px 28px;
+    border-radius: 40px;
+    width: 185px;
+    position: relative;
     background-color: #020817;
-    border: 1px solid #00D9FF;
-    color: #5ee7ff;
-    font-weight: 400 !important;
+    z-index: 1;
+    border: none;
+    color: #ffffff;
+    font-weight: 300 !important;
+    cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: color 0.3s ease;
     margin-left: auto;
     margin-right: auto;
-}
-.btn-experiencia img{
-    margin-left: 8px;
+    transition: color 0.3s ease;
+    overflow: hidden;
 }
 .btn-experiencia:hover{
-    transition: color 0.3s ease;
-    border: 1px solid #5fe7ff;
-    color: #5fe7ff;
-    background-color: #080808;
+    font-weight: 300 !important;
 }
+.btn-experiencia svg{
+    margin-left: 10px;
+}
+
+.btn-experiencia::before {
+    content: "";
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    right: -2px;
+    bottom: -2px;
+    background: linear-gradient(90deg, #FF3D91, #22C4FF);
+    border-radius: inherit;
+    z-index: -1;
+  }
+
+  .btn-experiencia:hover::before {
+    background: linear-gradient(90deg, #dc156c, #003f55);
+  }
+  
+  .btn-experiencia::after {
+    content: "";
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    right: 2px;
+    bottom: 2px;
+    background: #020817;
+    border-radius: inherit;
+    z-index: -1;
+  }
+
+
+
+
+
+
 
 
 .cebrero-ux{
@@ -184,7 +313,7 @@ section .elipse-blu-s{
 .cebrero-ux .brain{
     position: relative; /* Necesario para la animación */
     margin: 0px auto;
-    animation: moveUpDown 5s infinite ease-in-out; /* Configuración de la animación */
+    animation: moveUpDown 4s infinite ease-in-out; /* Configuración de la animación */
 }
 /* Animación para mover de arriba a abajo */
 @keyframes moveUpDown {
@@ -362,8 +491,8 @@ article:hover .articulo {
         width: 800px;
         position: absolute;
         z-index: -1;
-        left: -150px;
-        top: -150px;
+        left: -160px;
+        top: -180px;
     }
      .elipse-blu-s{
         display: block;
@@ -380,6 +509,13 @@ article:hover .articulo {
     .text-head h1{
         font-size: 60px;
         font-weight: 500;
+    }
+    .text-head .hola{
+        font-weight: 700;
+    }
+    .text-head .abajo{
+        font-size: 35px;
+        font-weight: 400;
     }
     .text-head p{
        padding-top: 20px;
@@ -398,21 +534,25 @@ article:hover .articulo {
         width: 180px;
         height: 50px;
         padding: 12 16;
-        border-radius: 14px;
+        border-radius: 40px;
         cursor: pointer;
         font-size: 16px;
         font-weight: 500;
         
     }
+    .btns a .btn-contactar{
+        width: 160px;
+    }
     .btn-descargar{
         border: 0px;
+        font-weight: 600;
         color: #020817;
     }
     .maze{
         position: absolute;
         display: block;
         width: 190px;
-        margin-right: -700px;
+        margin-right: -750px;
         margin-top: 100px;
     }
     .invision{
@@ -438,23 +578,18 @@ article:hover .articulo {
         /* flex-direction: row; */
         /* align-items: normal; */
         padding-top: 50px;
+        
     }
+    
     
     .text-head-dos{
         text-align: left;
-        
-        max-width: none;
-        padding-top: 120px;
+        margin-right: 50px;
+        max-width: 550px;
+        padding-top: 20px;
         padding-bottom: 10px;
     }
-    .text-head-dos h1{
-        font-weight: 500;
-        display: inline-block;
-        font-size: 34px;
-        line-height: 36px;
-        background-color: rgb(10, 10, 10);
-        padding: 15px;
-    }
+    
     .text-head-dos p{
         font-size: 18px;
         font-weight: 300;
