--- a/src/styles/base/_variables.css
+++ b/src/styles/base/_variables.css
@@ -4,6 +4,6 @@
     --terciary-color: #22C4FF;
     --font-family: 'Roboto', sans-serif ;
     --font-size-base: 14px;
-    --text-color: #cfcfcf ;
+    --text-color: #dcdcdc ;
     --background-colors: #020817;
 }
