--- a/src/styles/SobreMi.css
+++ b/src/styles/SobreMi.css
@@ -9,6 +9,7 @@ section{
     flex-direction: column;
     align-items: center;
     margin: 0 auto;
+    margin-bottom: 20px;
 }
 .elipse-fu-s{
     width: 400px;
@@ -46,14 +47,15 @@ section{
   -webkit-text-fill-color: transparent; /* Hace el texto transparente para mostrar el degradado */
 }
 
-.text-formacion{
-    margin-bottom: 8px;
+.datos .text-formacion{
+    margin-top: 12px;
+    margin-bottom: 16px;
 }
 .formacion{
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 130px;
+    width: 135px;
 }
 
 .idc{
@@ -65,12 +67,18 @@ section{
     margin-right: 8px;
     width: 25px;
 }
+.upc{
+    margin-right: 8px;
+    width: 35px;
+}
 .carreras{
+    margin-top: 12px;
     display: flex;
+    flex-wrap: wrap;
     text-align: left;
     justify-content: center;
     align-items: center;
-    gap: 40px
+    gap: 30px
     ;
 }
 
@@ -142,6 +150,7 @@ section{
     align-items: normal;
     margin: 0 auto;
     justify-content: center;
+    margin-bottom: 70px;
     }
     .datos{
         text-align: left;
@@ -193,5 +202,8 @@ section{
     }
     .experiencia{
         margin-bottom: 25px;
+    }
+    .upc-formacion{
+        width: 145px;
     }
 }
