--- a/src/styles/base/_globales.css
+++ b/src/styles/base/_globales.css
@@ -20,3 +20,14 @@ a {
     margin: 0;
     padding: 0;
   }
+
+  p{
+    font-size: 14px;
+    font-weight: 300;
+  }
+
+  @media (min-width: 768px){
+    p{
+      font-size: 16px;
+    }
+  }
